--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,6 @@
             position: relative;
         }
 
-        /* Köşelere teknik detay süsü */
         .login-container::before {
             content: '';
             position: absolute;
@@ -68,7 +67,7 @@
             color: #fff;
             padding: 12px;
             font-family: 'IBM Plex Mono', monospace;
-            box-sizing: border-box; /* Padding taşmasını engeller */
+            box-sizing: border-box; 
         }
 
         input:focus {
